// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should find all the types of Components 1`] = `
<div>
  <ClassComponent>
    <div
      data-a8f769be={true}
    />
  </ClassComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 2`] = `
<div>
  <Component>
    <div
      data-f49764c6={true}
    />
  </Component>
</div>
`;

exports[`babel plugin should find all the types of Components 3`] = `
<div>
  <FunctionalComponent>
    <p
      data-b5d7faff={true}
    />
  </FunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 4`] = `
<div>
  <Component>
    <Button
      data-8e388bfc={true}
    >
      <button
        data-8e388bfc={true}
      />
    </Button>
  </Component>
</div>
`;

exports[`babel plugin should find all the types of Components 5`] = `
<div>
  <Component>
    <div
      data-889909b2={true}
      data-test="testme"
    />
  </Component>
</div>
`;

exports[`babel plugin should find nested Component 1`] = `
<ClassComponent>
  <div
    data-a8f769be={true}
  >
    <Component>
      <div
        data-f49764c6={true}
      >
        <FunctionalComponent>
          <p
            data-b5d7faff={true}
          >
            <Component>
              <Button
                data-8e388bfc={true}
              >
                <button
                  data-8e388bfc={true}
                />
              </Button>
            </Component>
          </p>
        </FunctionalComponent>
      </div>
    </Component>
  </div>
</ClassComponent>
`;

exports[`babel plugin should save Component\`s root attrs 1`] = `
<Component>
  <div
    data-889909b2={true}
    data-test="testme"
  />
</Component>
`;

exports[`babel plugin should save Component\`s root attrs 2`] = `
DOMStringMap {
  "889909b2": "true",
  "test": "testme",
}
`;

exports[`babel plugin should transform source code well for development 1`] = `
"'use strict';

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = undefined;
exports.FunctionalComponent = FunctionalComponent;

var _react = require('react');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

const Button = props => _react2.default.createElement('button', props, props.children);

/* eslint-disable no-unused-vars */
/* eslint-disable react/prefer-stateless-function */

const UnexportComponent = ({ children }) => _react2.default.createElement(
  'div',
  {
    'data-c7b7156f': true
  },
  children
);
/* eslint-enable no-unused-vars */

UnexportComponent.testId = 'c7b7156f';
class ClassComponent extends _react2.default.Component {
  render() {
    return _react2.default.createElement(
      'div',
      {
        'data-a8f769be': true
      },
      this.props.children
    );
  }
}

exports.ClassComponent = ClassComponent;
ClassComponent.testId = 'a8f769be';
const ArrowFunctionalComponent = exports.ArrowFunctionalComponent = ({ children }) => _react2.default.createElement(
  'div',
  {
    'data-f49764c6': true
  },
  children
);

ArrowFunctionalComponent.testId = 'f49764c6';
function FunctionalComponent({ children }) {
  return _react2.default.createElement(
    'p',
    {
      'data-b5d7faff': true
    },
    children
  );
}

FunctionalComponent.testId = 'b5d7faff';
const ComposedComponent = exports.ComposedComponent = ({ children }) => _react2.default.createElement(
  Button,
  {
    'data-8e388bfc': true
  },
  children
);

ComposedComponent.testId = '8e388bfc';
const ComponentWithAttrs = exports.ComponentWithAttrs = ({ children }) => _react2.default.createElement(
  'div',
  { 'data-test': 'testme', 'data-889909b2': true
  },
  children
);

ComponentWithAttrs.testId = '889909b2';

exports.default = ({ children }) => _react2.default.createElement(
  'div',
  {
    'data-5f9b51d4': true
  },
  children
);

exports.default.testId = '5f9b51d4';"
`;
